# service/gateway/docs/swagger.json
@@ -5206,6 +5206,12 @@
         "Trashbin": {
             "type": "object",
             "properties": {
+                "create_time": {
+                    "type": "string"
+                },
+                "delete_time": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
